--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .about-me {
-  /* background-image: url('/images/img-2.jpg'); */
+  background-image: url('./images/image3.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -26,16 +26,16 @@
 }
 
 .projects {
-  /* background-image: url('/images/img-1.jpg'); */
+  background-image: url('./images/image2.jpg');
   background-position: center;
-  background-size: fill;
+  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
 }
 
 .contact {
-  /* background-image: url('/images/img-8.jpg'); */
+  background-image: url('./images/image1.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
